@@ -1,2 +1,7 @@
 # MSWordReplaceApp
  JavaFx app for replacing unique $word$ occurences in *.doc files
+ 
+ How to run:
+ Developed using JDK 15.0.1
+ Libraries used - javafx sdk 15.0.1; apache poi-4.1.2
+ VM arguments "--module-path D:\_Java_libs\javafx-sdk-15.0.1\lib --add-modules=javafx.controls"
